--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -34,3 +34,44 @@
   animation: slightSpin 4s linear 1s infinite;
   transform-origin: bottom;
 }
+
+#triangle {
+  border: 1.2vw solid rgba(251, 146, 60, 0.8);
+  border-top-color: transparent;
+  border-bottom-color: transparent;
+  border-left-color: transparent;
+  border-right-width: 3vw;
+  transform: rotate(45deg);
+}
+
+.box-decor {
+  width: 8vw;
+  height: 4vw;
+  background-image: radial-gradient(#41b294 10%, transparent 11%),
+    radial-gradient(#41b294 10%, transparent 11%);
+  background-size: 10px 10px;
+  top: -8vw;
+  left: -1vw;
+}
+
+.box-decor.box-decor__2 {
+  background-image: radial-gradient(#ed85ab 10%,transparent 11%);
+  top: 15vw;
+  left: 25vw;
+  height: 5vw;
+}
+
+.box-decor.box-decor__3 {
+  background-image: radial-gradient(#f6ba35 10%,transparent 11%);
+  transform: rotate(45deg);
+  top: -10vw;
+  left: 30vw;
+  width: 5vw;
+  height: 5vw;
+}
+
+#fly-and-cloud {
+  animation: slightSpin 5s linear 2s infinite;
+  top: -6vw;
+  z-index: -1;
+}
