fix: fetch-data-account

--- a/src/pages/Info/Info.scss
+++ b/src/pages/Info/Info.scss
@@ -7,6 +7,6 @@
   color: #fb923c !important;
 }
 
-.ant-tabs .ant-tabs-tab .ant-tabs-tab-btn:hover {
+.ant-tabs .ant-tabs-tab:hover .ant-tabs-tab-btn {
   color: #fb923c !important;
 }
