--- a/src/Components/Blog/BlogItem.scss
+++ b/src/Components/Blog/BlogItem.scss
@@ -20,6 +20,7 @@
     position: relative;
     text-decoration: none;
     transition: 0.2s;
+    color: white;
     
     svg {
       left: -20px;
