--- a/src/pages/Detail/Details.scss
+++ b/src/pages/Detail/Details.scss
@@ -53,9 +53,13 @@ button {
 }
 
 .margin {
-  margin-left: 300px;
+  margin-left: 200px;
 }
 
 .text-margin {
-  margin-left: 350px;
+  margin-left: 65px;
+}
+
+.img {
+  border-radius: 50%;
 }
