--- a/src/Components/InfoCourse/InfoCourse.scss
+++ b/src/Components/InfoCourse/InfoCourse.scss
@@ -1,5 +1,13 @@
-button.ant-btn.ant-btn-default.ant-btn-icon-only.ant-input-search-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+#info__course {
+  button.ant-btn.ant-btn-default.ant-btn-icon-only.ant-input-search-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .ant-pagination .ant-pagination-disabled .ant-pagination-item-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
