update: user-add-w-container

--- a/src/pages/Course/CourseCard.scss
+++ b/src/pages/Course/CourseCard.scss
@@ -1,6 +1,6 @@
 .card {
     transition: all 0.5s;
-    width: 280px;
+    width: 90%;
     min-width: 280px;
     min-height: 370px;
     position: relative;
